--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prod": "./node_modules/.bin/webpack -p"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^2.29.0",
     "webpack": "^3.0.0"
   }
 }
