--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "prod": "./node_modules/.bin/webpack -p"
   },
   "devDependencies": {
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.29.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^3.0.0"
   }
 }
