--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Martin",
   "license": "MIT",
   "scripts": {
-    "dev": "./node_modules/.bin/webpack -d --watch",
+    "dev": "webpack-dev-server",
     "prod": "./node_modules/.bin/webpack -p"
   },
   "devDependencies": {
@@ -16,6 +16,7 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "webpack": "^3.0.0"
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0"
   }
 }
