--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.29.0",
     "node-sass": "^4.5.3",
+    "pug": "^2.0.0-rc.2",
+    "pug-html-loader": "^1.1.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "rimraf": "^2.6.1",
