--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "webpack-2-demo",
-  "version": "0.0.1",
-  "description": "Webpack 2 demo",
-  "main": "index.js",
-  "author": "Martin",
-  "license": "MIT",
-  "scripts": {
-    "dev": "webpack-dev-server",
-    "prod": "yarn run clean && webpack -p",
-    "clean": "rimraf ./dist/*"
-  },
-  "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.4",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.29.0",
-    "node-sass": "^4.5.3",
-    "pug": "^2.0.0-rc.2",
-    "pug-html-loader": "^1.1.5",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
-  }
+    "name": "webpack-2-demo",
+    "version": "0.0.1",
+    "description": "Webpack 2 demo",
+    "main": "index.js",
+    "author": "Martin",
+    "license": "MIT",
+    "scripts": {
+        "dev": "webpack-dev-server",
+        "prod": "yarn run clean && NODE_ENV=production webpack -p",
+        "clean": "rimraf ./dist/*"
+    },
+    "devDependencies": {
+        "babel": "^6.23.0",
+        "babel-core": "^6.25.0",
+        "babel-loader": "^7.1.1",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "css-loader": "^0.28.4",
+        "extract-text-webpack-plugin": "^2.1.2",
+        "html-loader": "^0.4.5",
+        "html-webpack-plugin": "^2.29.0",
+        "node-sass": "^4.5.3",
+        "pug": "^2.0.0-rc.2",
+        "pug-html-loader": "^1.1.5",
+        "react": "^15.6.1",
+        "react-dom": "^15.6.1",
+        "rimraf": "^2.6.1",
+        "sass-loader": "^6.0.6",
+        "style-loader": "^0.18.2",
+        "webpack": "^3.0.0",
+        "webpack-dev-server": "^2.5.0"
+    }
 }
