--- a/package.json
+++ b/package.json
@@ -16,20 +16,26 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bootstrap-loader": "^2.1.0",
+    "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.29.0",
     "image-webpack-loader": "^3.3.1",
+    "imports-loader": "^0.7.1",
+    "jquery": "^3.2.1",
     "node-sass": "^4.5.3",
     "pug": "^2.0.0-rc.2",
     "pug-html-loader": "^1.1.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "resolve-url-loader": "^2.1.0",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   }
